create coverage page

--- a/src/home-insurance/36.2-coverage.html
+++ b/src/home-insurance/36.2-coverage.html
@@ -527,7 +527,7 @@
                           </div>
                         </div>
                         <div class="arrow-wrapper">
-                          <div class="arrow">
+                          <div class="arrow closetoggle">
                             <svg class="close" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1152 1792" style="background-color:inherit !important" fill="currentColor">
                                <path fill="inherit" d="M1075 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z">
                                </path>
@@ -536,7 +536,7 @@
                         </div>
                       </div>
                       
-                      <div class="toggleRow">
+                      <div class="toggleRow" style="display: block;">
                         <div class="contain-wrapper-sm">
                         <form class="mt-4">
                             <div class="blue-light-box bg-white p-0">
@@ -748,40 +748,14 @@
                                                                             </select>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="col-md-4">
-                                                                        <div class="input-group form-control px-0">
-                                                                            <input type="text" class="" placeholder="Enter length of boat" />
-                                                                            <span class="input-group-append ">
-                                                                                <span
-                                                                                    class="input-group-text border-0 bg-white d-block ps-0">
-                                                                                    Ft
-                                                                                </span>
-                                                                            </span>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="col-md-4">
-                                                                        <div class="input-group form-control px-0">
-                                                                            <input type="text" class="" placeholder="Speed" />
-                                                                            <span class="input-group-append ">
-                                                                                <span
-                                                                                    class="input-group-text border-0 bg-white d-block ps-0">
-                                                                                    MPH
-                                                                                </span>
-                                                                            </span>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="col-md-4">
+                                                                    <div class="col-md-12">
                                                                         <div class="f-group max-width-100">
                                                                             <select class="f-control f-dropdown"
-                                                                                placeholder="Select Horse Power"
+                                                                                placeholder="Select Length"
                                                                                 id="multiple" class="js-states form-control" multiple>
-                                                                                <option value="">Select Horse Power</option>
                                                                                 <option value="1">0</option>
-                                                                                <option value="2">50</option>
-                                                                                <option value="3">100</option>
-                                                                                <option value="4">150</option>
-                                                                                <option value="5">200</option>
-                                                                                <option value="6">500</option>
+                                                                                <option value="2">40ft</option>
+                                                                                <option value="3">100ft</option>
                                                                             </select>
                                                                         </div>
                                                                     </div>
