--- a/src/home-insurance/36.1-coverage.html
+++ b/src/home-insurance/36.1-coverage.html
@@ -527,7 +527,7 @@
                           </div>
                         </div>
                         <div class="arrow-wrapper">
-                          <div class="arrow">
+                          <div class="arrow closetoggle">
                             <svg class="close" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1152 1792" style="background-color:inherit !important" fill="currentColor">
                                <path fill="inherit" d="M1075 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z">
                                </path>
@@ -536,7 +536,7 @@
                         </div>
                       </div>
                       
-                      <div class="toggleRow">
+                      <div class="toggleRow" style="display: block;">
                         <div class="contain-wrapper-sm">
                         <form class="mt-4">
                             <div class="blue-light-box bg-white p-0">
@@ -915,29 +915,6 @@
                                                                 <label class="radio-inline radio-btn" for="sinkNo">
                                                                     <input class="radio-control" type="radio" name="sink"
                                                                         value="" id="sinkNo">
-                                                                    <span class="radio-custom"></span>
-                                                                    <span class="radio-label fs-14">Decline </span>
-                                                                </label>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-12 mt-3">
-                                                    <div class="form-group">
-                                                        <label for="" class="fs-16 font-bold">Tenant relocation</label>
-                                                        <div class="d-flex justify-content-start">
-                                                            <div class="d-flex align-self-center me-3">
-                                                                <label class="radio-inline radio-btn" for="tenantYes">
-                                                                    <input class="radio-control" checked type="radio" name="tenant"
-                                                                        value="" id="tenantYes">
-                                                                    <span class="radio-custom"></span>
-                                                                    <span class="radio-label fs-14">Accept </span>
-                                                                </label>
-                                                            </div>
-                                                            <div class="d-flex align-self-center me-3">
-                                                                <label class="radio-inline radio-btn" for="tenantNo">
-                                                                    <input class="radio-control" type="radio" name="tenant"
-                                                                        value="" id="tenantNo">
                                                                     <span class="radio-custom"></span>
                                                                     <span class="radio-label fs-14">Decline </span>
                                                                 </label>
