common flow for business is completed - screen 18 pending due to discussion

--- a/src/business-insurance/main-flow/20-main-flow.html
+++ b/src/business-insurance/main-flow/20-main-flow.html
@@ -144,27 +144,26 @@
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title text-center">Ownership Details</h3>
+                        <h3 class="title text-center">Is the pressure washing for preparation to paint or power washing as a stand alone service?</h3>
 
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
                                 <div class="">
                                     <div class="d-flex justify-content-between">
                                     </div>
-                                    <div class="vehicle-details w-100 mx-auto">
+                                    <div class="vehicle-details w-50 mx-auto">
                                         <div class="row g-3">
 
                                             <div class="col-12">
                                                 <div class="f-group max-width-100">
                                                     <div class="f-dropdown selectDropdown">
                                                         <select class="f-control f-dropdown"
-                                                            placeholder="Select the type of ownership" id="1">
-                                                            <option value="">Select the type of ownership</option>
-                                                            <option value="1">First
+                                                            placeholder="Select" id="1">
+                                                            <option value="">Select </option>
+                                                            <option value="1">Paint Prep Only
                                                             </option>
-                                                            <option value="2">Second
-                                                            </option>
-                                                            <option value="3">Rented
+                                                            <option value="2">
+                                                                Stand Alone Service
                                                             </option>
                                                         </select>
                                                     </div>
@@ -179,6 +178,7 @@
                             </form>
                         </div>
                     </div>
+                    
                 </div>
             </div>
     </main>
