--- a/src/business-insurance/main-flow/6-main-flow.html
+++ b/src/business-insurance/main-flow/6-main-flow.html
@@ -144,7 +144,7 @@
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title text-center">Ownership Details</h3>
+                        <h3 class="title text-center">What type of business do you have?</h3>
 
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
@@ -154,15 +154,72 @@
                                     <div class="vehicle-details w-100 mx-auto">
                                         <div class="row g-3">
 
-                                            <div class="col-12">
+                                            <div class="col-md-8 position-relative z-index-3">
+                                                <div class="f-group max-width-100  ">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Select the type of business" id="1">
+                                                            <option value="">Select the type of business</option>
+                                                            <option value="1">First
+                                                            </option>
+                                                            <option value="2" selected>Flooring
+                                                            </option>
+                                                            <option value="3">Rented
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-4 ">
+                                                <div class="f-group max-width-100 ">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Year business started" id="1">
+                                                            <option value="">Year business started</option>
+                                                            <option value="1">First
+                                                            </option>
+                                                            <option value="2">Flooring
+                                                            </option>
+                                                            <option value="3">Rented
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                            <div class="col-md-12">
+                                                <div class="notice-box">
+                                                    <div class="notice-header">
+                                                        <img src="../../images/info.svg" />
+                                                        <span>Important Notice</span>
+                                                    </div>
+                                                    <div class="notice-body">
+                                                        Companies will check the internet, social media, craigslist if
+                                                        there is anything that shows high risk work such as roofing,
+                                                        chimney, tall buildings. If you have anything anywhere showing
+                                                        this & you dont do it delete it now before we submit this to
+                                                        save you money
+                                                    </div>
+                                                    <div class="notice-footer">
+                                                        <img src="../../images/asterisk.svg" alt="" />
+                                                        <span>
+                                                            Google your phone# & check if any work you DON’T do comes up, if so delete it now  
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-12">
                                                 <div class="f-group max-width-100">
                                                     <div class="f-dropdown selectDropdown">
                                                         <select class="f-control f-dropdown"
-                                                            placeholder="Select the type of ownership" id="1">
-                                                            <option value="">Select the type of ownership</option>
+                                                            placeholder="Select the type of business" id="1">
+                                                            <option value="">Select the type of business</option>
                                                             <option value="1">First
                                                             </option>
-                                                            <option value="2">Second
+                                                            <option value="2" selected>Landscaper
                                                             </option>
                                                             <option value="3">Rented
                                                             </option>
