--- a/src/business-insurance/main-flow/8-main-flow.html
+++ b/src/business-insurance/main-flow/8-main-flow.html
@@ -142,42 +142,50 @@
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
-                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
+                            <p class="user-welcome mt-2">Hey! My Name is Anne
+                            </p>
                         </div>
-                        <h3 class="title text-center">Ownership Details</h3>
+                        <h3 class="title text-center">Does your business do Drywall, Plaster, or Both</h3>
 
-                        <div class="contain-wrapper-sm">
-                            <form class="mt-4">
-                                <div class="">
-                                    <div class="d-flex justify-content-between">
-                                    </div>
-                                    <div class="vehicle-details w-100 mx-auto">
-                                        <div class="row g-3">
-
-                                            <div class="col-12">
-                                                <div class="f-group max-width-100">
-                                                    <div class="f-dropdown selectDropdown">
-                                                        <select class="f-control f-dropdown"
-                                                            placeholder="Select the type of ownership" id="1">
-                                                            <option value="">Select the type of ownership</option>
-                                                            <option value="1">First
-                                                            </option>
-                                                            <option value="2">Second
-                                                            </option>
-                                                            <option value="3">Rented
-                                                            </option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
+                        <form class="mt-4">
+                            <div class="container-wrapper-md">
+                                <div class="d-flex flex-wrap justify-content-center business-cards">
+                                    <label class="checkbox-inline business-card mb-0" for="glass">
+                                        <input class="checkbox-control" type="radio" checked name="accident-type" value=""
+                                            id="glass">
+                                        <span class="checkbox-custom"></span>
+                                        <span class="checkbox-label">
+                                            <img src="../../images/business-icon/placeholder-marbel-1.png" alt=""
+                                                class="offline" />
+                                            Drywall
+                                        </span>
+                                    </label>
+                                    <label class="checkbox-inline business-card mb-0" for="collision">
+                                        <input class="checkbox-control" type="radio" name="accident-type" value=""
+                                            id="collision">
+                                        <span class="checkbox-custom"></span>
+                                        <span class="checkbox-label">
+                                            <img src="../../images/business-icon/placeholder-marbel-2.png" alt=""
+                                                class="offline" />
+                                            Plaster
+                                        </span>
+                                    </label>
+                                    <label class="checkbox-inline business-card mb-0 me-0" for="no-other-vehicle">
+                                        <input class="checkbox-control" type="radio" name="accident-type" value=""
+                                            id="no-other-vehicle">
+                                        <span class="checkbox-custom"></span>
+                                        <span class="checkbox-label">
+                                            <img src="../../images/business-icon/placeholder-marbel-3.png" alt=""
+                                                class="offline" />
+                                            Both
+                                        </span>
+                                    </label>
                                 </div>
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
-                            </form>
-                        </div>
+                            </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
