--- a/src/business-insurance/main-flow/21-main-flow.html
+++ b/src/business-insurance/main-flow/21-main-flow.html
@@ -144,35 +144,162 @@
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title text-center">Ownership Details</h3>
+                        <h3 class="title text-center">Tool Coverage</h3>
 
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
-                                <div class="">
-                                    <div class="d-flex justify-content-between">
-                                    </div>
-                                    <div class="vehicle-details w-100 mx-auto">
-                                        <div class="row g-3">
 
-                                            <div class="col-12">
-                                                <div class="f-group max-width-100">
-                                                    <div class="f-dropdown selectDropdown">
-                                                        <select class="f-control f-dropdown"
-                                                            placeholder="Select the type of ownership" id="1">
-                                                            <option value="">Select the type of ownership</option>
-                                                            <option value="1">First
-                                                            </option>
-                                                            <option value="2">Second
-                                                            </option>
-                                                            <option value="3">Rented
-                                                            </option>
-                                                        </select>
-                                                    </div>
+                                <div class="d-flex justify-content-center">
+                                    <label class="checkbox-inline w-auto mx-auto mb-0 w-auto" for="none">
+                                        <input class="checkbox-control main" type="checkbox" name="none" id="none">
+                                        <span class="checkbox-custom"></span>
+                                        <span class="checkbox-label fs-16 fw-700">none</span>
+                                    </label>
+                                </div>
+
+                                <div class="container-fluid claim-additional-info mt-4 bg-white border border-1">
+                                    <div class="row g-3">
+                                        <div class="col-12">
+                                            <div class="f-group max-width-100">
+                                                <div class="f-dropdown selectDropdown">
+                                                    <select class="f-control f-dropdown" placeholder="Type of Equipment"
+                                                        id="1">
+                                                        <option value="">Type of Equipment </option>
+                                                        <option value="1" selected>tool
+                                                        </option>
+                                                        <option value="2">
+                                                            Bobcat
+                                                        </option>
+                                                        <option value="3">
+                                                            Large Mobile Equipment
+                                                        </option>
+                                                    </select>
                                                 </div>
                                             </div>
-
                                         </div>
+
+                                        <div class="col-md-6">
+                                            <div class="input-group form-control px-0">
+                                                <span class="input-group-append ">
+                                                    <span class="input-group-text border-0 bg-white d-block pe-0">
+                                                        $
+                                                    </span>
+                                                </span>
+                                                <input type="text" class="" id="Enter amount"
+                                                    placeholder="How much do you want to cover">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <div class="f-group max-width-100">
+                                                <div class="f-dropdown selectDropdown">
+                                                    <select class="f-control f-dropdown" placeholder="Type of Equipment"
+                                                        id="1">
+                                                        <option value="">Tools stored at night in </option>
+                                                        <option value="1">tool
+                                                        </option>
+                                                        <option value="2">
+                                                            tool
+                                                        </option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
                                     </div>
+                                </div>
+
+                                <div class="container-fluid claim-additional-info mt-4 bg-white border border-1">
+                                    <div class="row g-3">
+                                        <div class="col-12">
+                                            <div class="f-group max-width-100">
+                                                <div class="f-dropdown selectDropdown">
+                                                    <select class="f-control f-dropdown" placeholder="Type of Equipment"
+                                                        id="1">
+                                                        <option value="">Type of Equipment </option>
+                                                        <option value="1">tool
+                                                        </option>
+                                                        <option value="2" selected>
+                                                            Bobcat
+                                                        </option>
+                                                        <option value="3">
+                                                            Large Mobile Equipment
+                                                        </option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="col-md-6">
+                                            <input type="text" class="form-control" id="" placeholder="Model Year">
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <div class="input-group form-control px-0">
+                                                <span class="input-group-append ">
+                                                    <span class="input-group-text border-0 bg-white d-block pe-0">
+                                                        $
+                                                    </span>
+                                                </span>
+                                                <input type="text" class="" id="" placeholder="Coverage amount">
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="container-fluid claim-additional-info mt-4 bg-white border border-1">
+                                    <div class="row g-3">
+                                        <div class="col-12">
+                                            <div class="f-group max-width-100">
+                                                <div class="f-dropdown selectDropdown">
+                                                    <select class="f-control f-dropdown" placeholder="Type of Equipment"
+                                                        id="1">
+                                                        <option value="">Type of Equipment </option>
+                                                        <option value="1">tool
+                                                        </option>
+                                                        <option value="2">
+                                                            Bobcat
+                                                        </option>
+                                                        <option value="3" selected>
+                                                            Large Mobile Equipment
+                                                        </option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="col-md-12">
+                                            <input type="text" class="form-control" id=""
+                                                placeholder="What type of equipment is this?">
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <input type="text" class="form-control" id="" placeholder="Model Year">
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <div class="input-group form-control px-0">
+                                                <span class="input-group-append ">
+                                                    <span class="input-group-text border-0 bg-white d-block pe-0">
+                                                        $
+                                                    </span>
+                                                </span>
+                                                <input type="text" class="" id="" placeholder="Coverage amount">
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <a class="btn-add mt-3" href="#">
+                                        <img src="../../images/add-pluse-circle.svg" alt="Add" class="icon" />
+                                        Add Additional
+                                    </a>
                                 </div>
                                 <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
