--- a/src/business-insurance/main-flow/7-main-flow(marbal).html
+++ b/src/business-insurance/main-flow/7-main-flow(marbal).html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main business-insurance-flow">
+            <div class="content-main">
                 <div class="content">
                     <div class="container-fluid">
                         <a class="text-blue ms-3 mt-3 back-arrow" href="#"><i
@@ -142,42 +142,20 @@
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
-                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
+                            <p class="user-welcome mt-2">Hey! My Name is Anne
+                            </p>
                         </div>
-                        <h3 class="title text-center">Ownership Details</h3>
+                        <h3 class="title  text-center">Does your business install tile marble or stone in a commercial setting?</h3>
 
-                        <div class="contain-wrapper-sm">
-                            <form class="mt-4">
-                                <div class="">
-                                    <div class="d-flex justify-content-between">
-                                    </div>
-                                    <div class="vehicle-details w-100 mx-auto">
-                                        <div class="row g-3">
-
-                                            <div class="col-12">
-                                                <div class="f-group max-width-100">
-                                                    <div class="f-dropdown selectDropdown">
-                                                        <select class="f-control f-dropdown"
-                                                            placeholder="Select the type of ownership" id="1">
-                                                            <option value="">Select the type of ownership</option>
-                                                            <option value="1">First
-                                                            </option>
-                                                            <option value="2">Second
-                                                            </option>
-                                                            <option value="3">Rented
-                                                            </option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
+                        <form class="mt-4">
+                            <div class="contain-wrapper-sm d-flex justify-content-center">
+                                <button class="btn btn-outline mt-4 mx-3"><span>No</span>
                                 </button>
-                            </form>
-                        </div>
+                                <button type="submit" class="btn btn-primary  mx-3 mt-4"><span>Yes</span>
+                                </button>
+                            </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
