--- a/src/business-insurance/main-flow/9-main-flow.html
+++ b/src/business-insurance/main-flow/9-main-flow.html
@@ -144,38 +144,16 @@
                             <img src="../../images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title text-center">Ownership Details</h3>
+                        <h3 class="title text-center">Does your business do any roofing</h3>
 
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
-                                <div class="">
-                                    <div class="d-flex justify-content-between">
-                                    </div>
-                                    <div class="vehicle-details w-100 mx-auto">
-                                        <div class="row g-3">
-
-                                            <div class="col-12">
-                                                <div class="f-group max-width-100">
-                                                    <div class="f-dropdown selectDropdown">
-                                                        <select class="f-control f-dropdown"
-                                                            placeholder="Select the type of ownership" id="1">
-                                                            <option value="">Select the type of ownership</option>
-                                                            <option value="1">First
-                                                            </option>
-                                                            <option value="2">Second
-                                                            </option>
-                                                            <option value="3">Rented
-                                                            </option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
+                                <div class="contain-wrapper-sm d-flex justify-content-center">
+                                    <button class="btn btn-outline mt-4 mx-3"><span>No</span>
+                                    </button>
+                                    <button type="submit" class="btn btn-primary  mx-3 mt-4"><span>Yes</span>
+                                    </button>
                                 </div>
-                                <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
-                                </button>
                             </form>
                         </div>
                     </div>
